apps/metatube/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metatube
  namespace: shikanime
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: metatube
  template:
    metadata:
      labels:
        app.kubernetes.io/name: metatube
    spec:
      containers:
        - name: metatube
          image: metatube:1.2.3
          args:
            - -dsn
            - /data/metatube.db
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: metatube-data
