apps/metatube/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: metatube
spec:
  replicas: 1
  serviceName: metatube
  selector:
    matchLabels:
      app.kubernetes.io/instance: metatube
      app.kubernetes.io/name: metatube
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: metatube
        app.kubernetes.io/name: metatube
    spec:
      containers:
        - name: metatube
          image: metatube
          args:
            - -dsn
            - /data/metatube.db
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 5
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 60
            timeoutSeconds: 5
          startupProbe:
            tcpSocket:
              port: http
            timeoutSeconds: 5
            failureThreshold: 180
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: metatube-data
