apps/metatube/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: metatube
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: metrics
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/instance: metatube
    app.kubernetes.io/name: metatube
